# genflow.ai

./: README.md  pyproject.toml
development/: prompts.py
development/langchain/: df_build.py  llm.py  main.py  utils.py
etc/vector_store/db_faiss/: index.faiss  index.pkl
