[tool.poetry]
name = "genflow-ai"
version = "0.1.0"
description = "requirements for genflow.ai"
authors = ["William Lindskog"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "genflow"}]

[tool.poetry.dependencies]
python = "3.9.5"
langchain = "^0.0.245"
pypdf = "^3.13.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
